<resources>
    <string name="app_name">My Movie Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="see_all">See All</string>
    <string name="top_rated">Top Rated</string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="casts">Casts</string>
    <string name="user_authentication_in_progress">User Authentication In Progress</string>
</resources>