<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.homescreen.HomeFragment">
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">


       <TextView
           android:id="@+id/nowPlaying_TextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/now_playing"
           android:textStyle="bold"
           android:textSize="28sp"
           android:textColor="@color/white"
           android:padding="12dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"/>
       <TextView
           android:id="@+id/seeAll_TextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:text="@string/see_all"
           android:textColor="@color/white"
           android:textSize="18sp"
           android:padding="18dp"
           app:layout_constraintStart_toEndOf="@id/nowPlaying_TextView"/>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/nowplaying_recyclerview"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:scrollbars="horizontal"
           android:layout_centerVertical="true"
           android:layout_centerHorizontal="true"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/nowPlaying_TextView"/>

       <TextView
           android:id="@+id/popular_TV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/popular"
           android:textStyle="bold"
           android:textColor="@color/white"
           android:textSize="28sp"
           android:layout_marginTop="12dp"
           android:paddingStart="12dp"
           app:guidelineUseRtl="true"
           app:layout_constraintTop_toBottomOf="@id/nowplaying_recyclerview"
           app:layout_constraintStart_toStartOf="parent"/>

       <TextView
           android:id="@+id/seeAll2_TextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/nowplaying_recyclerview"
           android:text="@string/see_all"
           android:textColor="@color/white"
           android:textSize="18sp"
           android:padding="18dp"
           android:layout_marginEnd="50dp"
           android:paddingStart="24dp"
           app:guidelineUseRtl="true"/>
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/popular_recyclerview"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:scrollbars="horizontal"
           android:layout_centerVertical="true"
           android:layout_centerHorizontal="true"
           app:layout_constraintStart_toStartOf="parent"
           android:paddingStart="8dp"
           app:layout_constraintTop_toBottomOf="@id/popular_TV"/>

   </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>