<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.moviedetails.MovieDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/film_poster_Iv"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/tom_and_gerry_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backarrow_icon_Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/white_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieDetail_filmname_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Avengers End Game"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/film_poster_Iv" />

        <ImageView
            android:id="@+id/bookmark_Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_book_mark_6"
            app:layout_constraintBottom_toBottomOf="@id/movieDetail_filmname_Tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movieDetail_filmname_Tv"
            app:layout_constraintTop_toBottomOf="@id/film_poster_Iv" />

        <ImageView
            android:id="@+id/ratingstar_moviedetail_IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_filmname_Tv"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/movieDetail_rating_number_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:text="3.98k"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/ratingstar_moviedetail_IV"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_filmname_Tv" />

        <TextView
            android:id="@+id/movieDetails_filmcategoty_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="tragedy, Action, Bla Bla Bla"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingstar_moviedetail_IV" />

        <TextView
            android:id="@+id/movieDetail_dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:text="18/2/2001"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetails_filmcategoty_Tv" />

        <ImageView
            android:id="@+id/movieDetail_clock_Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/clock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_dateTV" />

        <TextView
            android:id="@+id/movieDetail_duration_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="2:02"
            android:textColor="@color/cyan"
            app:layout_constraintBottom_toBottomOf="@id/movieDetail_clock_Iv"
            app:layout_constraintStart_toEndOf="@id/movieDetail_clock_Iv"
            app:layout_constraintTop_toTopOf="@id/movieDetail_clock_Iv" />


        <TextView
            android:id="@+id/movieDetail_overview_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_duration_Tv" />

        <TextView
            android:id="@+id/movieDetail_overviewText_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Once upon a time there was a tavern Where we used to raise a glass or two Remember how we laughed away Think of all the great things we would do Those were the days, my friend We thought they'd never end We'd sing and dance forever and a day
            We'd live the life we choose We'd fight and never lose For we were young and sure to have our way"
            android:textColor="@color/white"
            tools:ignore="HardcodedText"
           android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_overview_Tv"/>
        <TextView
            android:id="@+id/movieDetail_trailer_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/trailer"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_overviewText_Tv" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trailers_Rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_trailer_Tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/movieDetail_reviews_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/reviews"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trailers_Rv" />
        <TextView
            android:id="@+id/movieDetail_seeall_Tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/see_all"
            android:textColor="@color/cyan"
            android:textSize="18sp"
            android:padding="18dp"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toBottomOf="@id/trailers_Rv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movieDetail_reviews_Tv"/>
       <ImageView
           android:id="@+id/movieDetail_Userphoto_Iv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="12dp"
           app:layout_constraintStart_toStartOf="parent"
           android:src="@drawable/ic_baseline_supervised_user_circle_24"
           app:layout_constraintTop_toBottomOf="@id/movieDetail_reviews_Tv"/>

        <TextView
            android:id="@+id/movieDetail_username_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/movieDetail_Userphoto_Iv"
            app:layout_constraintStart_toEndOf="@id/movieDetail_Userphoto_Iv"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_reviews_Tv"
            android:layout_marginStart="12dp"
            android:text="Rana Hisham"/>
        <TextView
            android:id="@+id/movieDetail_review_dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="18/2/2001"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/movieDetail_Userphoto_Iv"
            app:layout_constraintEnd_toEndOf="@id/movieDetail_username_Tv"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_username_Tv" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Once upon a time there was a tavern Where we used to raise a glass or two Remember how we laughed away Think of all the great things we would do Those were the days, my friend We thought they'd never end We'd sing and dance forever and a day
            We'd live the life we choose We'd fight and never lose For we were young and sure to have our way"
            android:textColor="@color/white"
            tools:ignore="HardcodedText"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetail_review_dateTV"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>